<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_catalogo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_catalogo" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_pedidos" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_configuracion" />
    </group>

    <item android:title="Autenticación">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_login" />
        </menu>
    </item>

</menu>